# struct2swagger

./: .travis.yml  Cargo.toml  README.md
struct2swagger/: Cargo.toml
struct2swagger/src/: impl_data_types.rs  impl_swagger_trait.rs  lib.rs  swagger_object.rs
struct2swagger_derive/: Cargo.toml
struct2swagger_derive/src/: lib.rs
struct2swagger_derive/tests/: struct2json.rs  swagger.rs
swagger/: Cargo.toml
swagger/src/: impl_data_types.rs  impl_swagger_trait.rs  lib.rs  swagger_object.rs
swagger_derive/: Cargo.toml
swagger_derive/examples/: struct.rs
swagger_derive/src/: lib.rs
swagger_derive/tests/: struct.rs  struct2json.rs  swagger.rs
