[package]
name = "struct2swagger"
version = "0.1.2"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
edition = "2018"
description = "Create Swagger OpenApi3 from your structs"
repository = "https://github.com/allevo/struct2swagger"
readme = "../README.md"
keywords = ["swagger", "openapi", "openapi3"]
categories = ["HTTP server"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.1"
syn = { version = "1.0.3", features = ["full"] }
quote = "1.0.2"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
